updated using positoin

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
       </div>
       <div class="navbar__s3">
         <p>Courses</p>
-        <p>My Learing</p>
+        <!-- <p>My Learing</p> -->
+         <div class="mylearning">
+          <p>My learning</p>
+            <div class="mylearning__popup">
+              <p>Your didn't purchase anything yet.</p>
+            </div>
+         </div>
         <i class="fa-solid fa-cart-shopping" style="color: #050505"></i>
         <i class="fa-solid fa-bell" style="color: #000000"></i>
         <i class="fa-solid fa-user" style="color: #050505"></i>
@@ -52,6 +58,11 @@
     </div>
     <div class="sale-image">
       <img src="./images/sale-image.jpg" alt="sale-image" />
+      <div class="sale-image__offer">
+        <h1>Learning that gets you</h1>
+        <p>Skills for your present (and your future). Get started with us.</p>
+      </div>
+     
     </div>
     <!-- Recommended -->
     <div class="recomended">
