--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
          </div>
         <i class="fa-solid fa-cart-shopping" style="color: #050505"></i>
         <i class="fa-solid fa-bell" style="color: #000000"></i>
-        <i class="fa-solid fa-user" style="color: #050505"></i> 
+        <i class="fa-solid fa-user" style="color: #050505"></i>
+      </div>
+      <div class="navbar__s4">
+        <i class="fa-solid fa-bars"></i>
       </div>
     </div>
     <!-- categories -->
